--- a/src/main/resources/templates/udashboard.html
+++ b/src/main/resources/templates/udashboard.html
@@ -16,9 +16,10 @@
 
             <a class="btn btn-danger btn-lg" th:href="@{/udashboard}" role="button">Home</a>
             <a class="btn btn-primary btn-lg" th:href="@{/inventory/ulist}" role="button">View Blood in Hospitals</a>
-            <a class="btn btn-success btn-lg" th:href="@{/equipment/list}" role="button">Request Blood</a>
-            <a class="btn btn-warning btn-lg" th:href="@{/donations/list}" role="button">Donate Blood</a>
-            <a class="btn btn-primary btn-lg" th:href="@{/logout}" role="button">My Requests</a>
+            <a class="btn btn-success btn-lg" th:href="@{/request_blood}" role="button">Request Blood</a>
+            <a class="btn btn-warning btn-lg" th:href="@{/blood-requests/others}" role="button">Blood Requests</a>
+            <a class="btn btn-primary btn-lg" th:href="@{/blood-requests/myrequests}" role="button">My Requests</a>
+            <a class="btn btn-success btn-lg" th:href="@{/blood-requests/history}" role="button">History</a>
             <a class="btn btn-danger btn-lg" th:href="@{/logout}" role="button">Logout</a>
             
         </div>
