--- a/src/main/resources/templates/blood_requests_list.html
+++ b/src/main/resources/templates/blood_requests_list.html
@@ -10,16 +10,17 @@
     <div class="container mt-5">
         <div class="jumbotron mt-5">
             <h1 class="display-4">Welcome, <span th:text="${username}"></span>!</h1>
-            <p class="lead">This is your hospital dashboard for Life Bridge.</p>
+            <p class="lead">This is your integrated dashboard for blood funds and equipment management.</p>
             <hr class="my-4">
             <p>Select an option below to get started:</p>
-
-            <a class="btn btn-danger btn-lg" th:href="@{/udashboard}" role="button">Home</a>
-            <a class="btn btn-primary btn-lg" th:href="@{/inventory/ulist}" role="button">View Blood in Hospitals</a>
-            <a class="btn btn-success btn-lg" th:href="@{/request_blood}" role="button">Request Blood</a>
-            <a class="btn btn-warning btn-lg" th:href="@{/donations/list}" role="button">Donate Blood</a>
-            <a class="btn btn-primary btn-lg" th:href="@{/logout}" role="button">My Requests</a>
-            <a class="btn btn-danger btn-lg" th:href="@{/logout}" role="button">Logout</a>
+            
+            <!-- Link to Manage Blood Inventory -->
+            <a class="btn btn-primary btn-lg" th:href="@{/inventory/list}" role="button">Manage Blood Inventory</a>
+            <a class="btn btn-danger btn-lg" th:href="@{/blood-requests/list1}" role="button">Blood Requests</a>
+            <a class="btn btn-success btn-lg" th:href="@{/equipment/list}" role="button">Manage Equipment</a>
+            <a class="btn btn-warning btn-lg" th:href="@{/blood-requests/history1}" role="button">History</a>
+            <a class="btn btn-primary btn-lg" th:href="@{/logout}" role="button">Logout</a>
+            
             
         </div>
         <h2>Blood Requests</h2>
